--- a/pages/AuthenticationImage.module.css
+++ b/pages/AuthenticationImage.module.css
@@ -1,7 +1,7 @@
 .wrapper {
     min-height: rem(900px);
-    background-size: cover;
-    background-image: url(https://images.unsplash.com/photo-1484242857719-4b9144542727?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1280&q=80);
+    background-size: 1930px 900px;
+    background-image: url(https://w.wallha.com/ws/13/YFHzeabx.jpg);
   }
   
   .form {
@@ -9,6 +9,8 @@
     min-height: rem(900px);
     max-width: rem(450px);
     padding-top: rem(80px);
+    background-size: 450px 900px;
+    background-image: url(https://img.freepik.com/fotos-premium/animegirlinbikini-anime-girl-041_976118-37.jpg?w=740);
   
     @media (max-width: $mantine-breakpoint-sm) {
       max-width: 100%;
