--- a/pages/AuthenticationImage.module.css
+++ b/pages/AuthenticationImage.module.css
@@ -67,6 +67,13 @@
     min-height: 600px;
     padding: 4rem !important;
   }
+  .buttonRoot2 {
+    --button-height: var(--button-height-xl) !important;
+    --button-padding-x: var(--button-padding-x-xl) !important;
+    --button-color: var(--mantine-color-black) !important;
+    margin-top: var(--mantine-spacing-xl) !important;
+    background-color: rgb(255, 255, 255) !important;
+  }
 }
 
 .title {
@@ -97,6 +104,7 @@
     --button-padding-x: var(--button-padding-x-xl) !important;
     --button-color: var(--mantine-color-white) !important;
     margin-top: var(--mantine-spacing-xl) !important;
+    background-color: brown !important;
   }
   .buttonLabel {
     font-size: 2.5rem;
