--- a/pages/AuthenticationImage.module.css
+++ b/pages/AuthenticationImage.module.css
@@ -1,3 +1,5 @@
+/* CSS Geral para todas as resoluções */
+
 .wrapper {
   display: flex;
   justify-content: center;
@@ -6,6 +8,15 @@
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
+}
+
+.form {
+  min-height: 600px;
+  max-width: 450px;
+  padding: 2rem;
+  border-radius: 1rem;
+  position: relative;
+  z-index: 1;
 }
 
 .video {
@@ -18,9 +29,13 @@
   top: 0;
   bottom: 0;
   z-index: -1;
-  display: block;
 }
 
+.title {
+  font-family: "Pixelify Sans", var(--mantine-font-family);
+}
+
+/* Especificos para cada resolução */
 @media (min-width: 2560px) {
   .video {
     display: block;
@@ -38,35 +53,35 @@
     background-image: url('https://wallpaperxyz.com/wp-content/uploads/Gif-Animated-Wallpaper-Background-Full-HD-Free-Download-for-PC-Macbook-261121-Wallpaperxyz.com-13.gif');
   }
 }
- 
-.form {
-  min-height: 600px;
-  max-width: 450px;
-  padding: 2rem;
-  border-radius: 1rem;
-  position: relative;
-  z-index: 1;
 
-  @media (max-width: 425px) {
+@media (max-width: 425px) {
+  .form {
     max-width: 350px;
     min-height: 500px;
   }
+}
 
-  @media (max-width: 320px) {
-    max-width: 200px;
-    min-height: 300px;
-  }
-
-  @media (max-width: 375px) {
+@media (max-width: 375px) {
+  .form {
     max-width: 300px;
     min-height: 400px;
   }
+}
 
-  @media (min-width: 2560px) {
+@media (max-width: 320px) {
+  .form {
+    max-width: 200px;
+    min-height: 300px;
+  }
+}
+
+@media (min-width: 2560px) {
+  .form {
     min-width: 1200px;
     min-height: 600px;
     padding: 4rem !important;
   }
+
   .buttonRoot2 {
     --button-height: var(--button-height-xl) !important;
     --button-padding-x: var(--button-padding-x-xl) !important;
@@ -74,31 +89,30 @@
     margin-top: var(--mantine-spacing-xl) !important;
     background-color: rgb(255, 255, 255) !important;
   }
-}
 
-.title {
-  font-family: "Pixelify Sans", var(--mantine-font-family);
-}
-
-@media (min-width: 2560px) {
   .title {
     font-size: 4rem;
   }
+
   .textInputLabel {
     font-size: 2rem;
     align-self: center;
   }
+
   .textCheckboxIcon {
     --checkbox-size: var(--checkbox-size-xl);
   }
+
   .textInputInput {
     --input-height: var(--input-height-xl) !important;
     --input-fz: var(--mantine-font-size-xl) !important;
     font-size: 2rem;
   }
+
   .AccountText {
-    font-size: 2rem
+    font-size: 2rem;
   }
+
   .buttonRoot {
     --button-height: var(--button-height-xl) !important;
     --button-padding-x: var(--button-padding-x-xl) !important;
@@ -106,6 +120,7 @@
     margin-top: var(--mantine-spacing-xl) !important;
     background-color: brown !important;
   }
+
   .buttonLabel {
     font-size: 2.5rem;
   }
